# Fuwa

./: .gitignore  Cargo.toml
.github/workflows/: build-and-release.yml
src/: main.rs
